# coachito

./: .dockerignore  .env.example  .env.prod.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_extensions_and_sports.py  0002_users_and_workspaces.py  0003_athletes_skills_tiers.py  0006_rls_policies.py  (+37 more)
apps/api/data/: descriptors_padel.json  descriptors_tennis.json  skills_padel.json  skills_tennis.json  tier_requirements.json  tier_requirements_tennis.json  tiers.json  tiers_tennis.json
apps/api/scripts/: curl_test_curriculum.sh  dev_seed_demo.py  e2e_seed.py  run_monthly_cron.py  seed.py  test_pdf_smoke.py
apps/api/src/: config.py  deps.py  main.py
apps/api/templates/: invite_landing.html  report.css  report.html
apps/api/tests/: _test_helpers.py  test_ai_draft_summary.py  test_assessment_draft.py  test_assessments.py  test_athletes.py  test_audit.py  test_auth.py  test_e2e_happy_path.py  test_health.py  test_invite_claim.py  test_invites.py  test_match_maker_draft.py  test_match_maker_live.py  test_match_maker_phase3.py  test_match_maker_phase3_polish.py  test_multisport.py  test_password_auth.py  test_report_email.py  test_reports.py  test_sessions.py  test_settings.py  test_skills_me.py  test_tennis_curriculum_data.py  test_trainee_coaches.py  test_trainee_reports.py  test_trainee_scope.py  test_uploads.py  test_users_me.py  test_workspace_members.py  test_workspaces.py
(+363 files in other folders)
