[project]
name = "coachito-api"
version = "0.0.0"
description = "PadelCoach API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "rq>=1.16.0",
    "pyjwt>=2.9.0",
    "google-auth>=2.32.0",
    "requests>=2.32.0",
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.4",
    "redis>=5.0.0",
    "email-validator>=2.2.0",
    "boto3>=1.34.0",
    "weasyprint>=62.3",
    "argon2-cffi>=23.1",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
